# hangman_game

./: README.md  pyproject.toml  requirements.txt
docs/: .excalidraw
src/: main.py
src/app/: game.py  use_cases.py
src/core/: exceptions.py
src/core/configs/: common_config.py  ui_confog.py
src/domain/: letter.py  word.py
src/interface/: presenter.py
src/services/: services.py
src/ui/: view.py
static/: words.txt
tests/: test_app.py  test_domain.py  test_sevices.py  test_ui.py
